# clipify

./: .gitignore
backend/: pyproject.toml  tmp_check_job.py
backend/alembic/: env.py
backend/alembic/versions/: 1a252b420170_initial_migration.py  4981bfc7d6d8_add_transcript_column.py  591f619db6fd_add_viral_clips_column.py  e25aebbb2e68_add_video_metadata_and_progress_columns.py
backend/app/: main.py
backend/app/api/routes/: jobs.py
backend/app/core/: config.py
backend/app/db/: engine.py
backend/app/models/: job.py
backend/app/schemas/: job.py
backend/app/services/: worker.py
backend/app/services/pipeline/: __init__.py  aggregator.py  analyzer.py  audio_analyzer.py  clipper.py  downloader.py  prompts.py  transcriber.py  vision_analyzer.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/jobs/: EmptyJobs.tsx  JobCard.tsx  JobVideoHeader.tsx
frontend/src/components/layout/: TopNav.tsx
frontend/src/components/processing/: ProcessingStep.tsx  ProcessingVideoCard.tsx
frontend/src/components/shorts/: ClipCard.tsx  PreviewModal.tsx
frontend/src/components/ui/: AuroraProgress.tsx  Button.tsx  Card.tsx  Chip.tsx  Input.tsx
frontend/src/pages/: Home.tsx  JobDetails.tsx  JobsList.tsx  Processing.tsx  YourShorts.tsx
