[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "librosa>=0.11.0",
    "openai>=2.43.0",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2026.6.9",
]
